Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     <section class="main-content">
       <p>JLM Cover Letter</p>
 
+<p>To Whom It May Concern:</p>
+
+<p>I am writing to apply for the position of QA Engineer, which I saw posted on Indeed.com. I was particularly excited to see a position open at the Sierra Club, as I have long been a fan of your work. I’m impressed by the way you make environmental issues accessible to non-environmentalists (particularly in the pages of Sierra Magazine, which has sucked me in more times than I can count), and I would love the opportunity to be part of your organization.</p>
+
+<p>My history with web development goes back to my teenage years, when I taught myself HTML and built web pages for my friends, but after the dot-com bust, I thought it would be more prudent to put aside my passion for problem-solving and study accounting instead. Spending the last few years as an insurance adjuster has given me many of the communication and research skills you're looking for. As you can imagine, no two insurance claims are alike, and the job required time-sensitive research on policy and legal precedent. Also, most customers are at very difficult times in their lives during a claim, and have very little understanding of their insurance policies, so it was important to provide excellent communication with customers to help them understand their settlement and the claims process.</p>
+
+<p>Now, I'm working to realize my earlier dreams of being a programmer by taking the Epicodus web development program. In class, we write tests for nearly everything we code, and I pride myself on writing thorough, well thought out tests. About a month ago I participated in the PDX code retreat. I paired with an experienced Java programmer during the “silent” portion of the coding challenge. At the end of the hour, he told me, “You write test better than most of the programmers I work with!” As I begin my career as a developer, I’m interested in bringing my testing skills to my work and continuing to improve them.</p>
+
+<p>Thank you for taking the time to review my application. I hope that my experience with testing software and the communication skills I bring from insurance adjustment will make me a great fit for the QA Engineer position, and I'd be thrilled to work at the Sierra Club. I hope to hear from you soon!</p>
+
+<p>Sincerely,</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jlmwebhosting/jlm_cover_letter">Jlm cover letter</a> is maintained by <a href="https://github.com/jlmwebhosting">jlmwebhosting</a>.</span>
 
